hphp/hack/test/extracted_from_manual/13-contexts-and-capabilities/01-introduction-03.hack_error
// @generated by hh_manual from manual/hack/13-contexts-and-capabilities/01-introduction.md
// @codegen-command : buck run fbcode//hphp/hack/src/hh_manual:hh_manual extract fbcode/hphp/hack/manual/hack/
function cannot_do_io()[]: void {
  echo "Hello world\n"; // error: IO capability required
}

class Foo {
  public int $x = 0;
}

function cannot_write_props(Foo $f)[]: void {
  $f->x = 1; // error: WriteProperty capability required
}
